revert jdl to version that worked

--- a/src/main/webapp/app/entities/review/list/review.component.html
+++ b/src/main/webapp/app/entities/review/list/review.component.html
@@ -74,6 +74,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="route.id">
+            <div class="d-flex">
+              <span>Route</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -90,6 +96,11 @@
           <td>
             <div *ngIf="review.appUser">
               <a [routerLink]="['/app-user', review.appUser.id, 'view']">{{ review.appUser.id }}</a>
+            </div>
+          </td>
+          <td>
+            <div *ngIf="review.route">
+              <a [routerLink]="['/route', review.route.id, 'view']">{{ review.route.id }}</a>
             </div>
           </td>
           <td class="text-end">
