--- a/src/main/webapp/app/entities/stop/list/stop.component.html
+++ b/src/main/webapp/app/entities/stop/list/stop.component.html
@@ -68,9 +68,15 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="city.id">
+          <th scope="col" jhiSortBy="rating">
             <div class="d-flex">
-              <span>City</span>
+              <span>Rating</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
+          <th scope="col" jhiSortBy="route.id">
+            <div class="d-flex">
+              <span>Route</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
@@ -87,9 +93,10 @@
           <td>{{ stop.latitude }}</td>
           <td>{{ stop.longitude }}</td>
           <td>{{ stop.sequenceNumber }}</td>
+          <td>{{ stop.rating }}</td>
           <td>
-            <div *ngIf="stop.city">
-              <a [routerLink]="['/route', stop.city.id, 'view']">{{ stop.city.id }}</a>
+            <div *ngIf="stop.route">
+              <a [routerLink]="['/route', stop.route.id, 'view']">{{ stop.route.id }}</a>
             </div>
           </td>
           <td class="text-end">
