--- a/src/main/webapp/app/entities/review/detail/review-detail.component.html
+++ b/src/main/webapp/app/entities/review/detail/review-detail.component.html
@@ -40,6 +40,12 @@
             <a [routerLink]="['/app-user', review.appUser.id, 'view']">{{ review.appUser.id }}</a>
           </div>
         </dd>
+        <dt><span>Route</span></dt>
+        <dd>
+          <div *ngIf="review.route">
+            <a [routerLink]="['/route', review.route.id, 'view']">{{ review.route.id }}</a>
+          </div>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
