--- a/src/main/webapp/app/entities/route/detail/route-detail.component.html
+++ b/src/main/webapp/app/entities/route/detail/route-detail.component.html
@@ -14,40 +14,30 @@
         <dd>
           <span>{{ route.id }}</span>
         </dd>
-        <dt><span>Title</span></dt>
-        <dd>
-          <span>{{ route.title }}</span>
-        </dd>
-        <dt><span>Description</span></dt>
-        <dd>
-          <span>{{ route.description }}</span>
-        </dd>
-        <dt><span>Rating</span></dt>
-        <dd>
-          <span>{{ route.rating }}</span>
-        </dd>
         <dt><span>Distance</span></dt>
         <dd>
           <span>{{ route.distance }}</span>
+        </dd>
+        <dt><span>Stops</span></dt>
+        <dd>
+          <span>{{ route.stops }}</span>
         </dd>
         <dt><span>Cost</span></dt>
         <dd>
           <span>{{ route.cost }}</span>
         </dd>
-        <dt><span>Num Reviews</span></dt>
+        <dt><span>Duration</span></dt>
         <dd>
-          <span>{{ route.numReviews }}</span>
+          <span>{{ route.duration }}</span>
+        </dd>
+        <dt><span>Tag Name</span></dt>
+        <dd>
+          <span>{{ route.tagName }}</span>
         </dd>
         <dt><span>City</span></dt>
         <dd>
           <div *ngIf="route.city">
             <a [routerLink]="['/city', route.city.id, 'view']">{{ route.city.id }}</a>
-          </div>
-        </dd>
-        <dt><span>App User</span></dt>
-        <dd>
-          <div *ngIf="route.appUser">
-            <a [routerLink]="['/app-user', route.appUser.id, 'view']">{{ route.appUser.id }}</a>
           </div>
         </dd>
       </dl>
