--- a/src/main/webapp/app/entities/route/list/route.component.html
+++ b/src/main/webapp/app/entities/route/list/route.component.html
@@ -38,27 +38,15 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="title">
-            <div class="d-flex">
-              <span>Title</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
-          <th scope="col" jhiSortBy="description">
-            <div class="d-flex">
-              <span>Description</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
-          <th scope="col" jhiSortBy="rating">
-            <div class="d-flex">
-              <span>Rating</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
           <th scope="col" jhiSortBy="distance">
             <div class="d-flex">
               <span>Distance</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
+          <th scope="col" jhiSortBy="stops">
+            <div class="d-flex">
+              <span>Stops</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
@@ -68,21 +56,21 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="numReviews">
+          <th scope="col" jhiSortBy="duration">
             <div class="d-flex">
-              <span>Num Reviews</span>
+              <span>Duration</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
+          <th scope="col" jhiSortBy="tagName">
+            <div class="d-flex">
+              <span>Tag Name</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
           <th scope="col" jhiSortBy="city.id">
             <div class="d-flex">
               <span>City</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
-          <th scope="col" jhiSortBy="appUser.id">
-            <div class="d-flex">
-              <span>App User</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
@@ -94,20 +82,14 @@
           <td>
             <a [routerLink]="['/route', route.id, 'view']">{{ route.id }}</a>
           </td>
-          <td>{{ route.title }}</td>
-          <td>{{ route.description }}</td>
-          <td>{{ route.rating }}</td>
           <td>{{ route.distance }}</td>
+          <td>{{ route.stops }}</td>
           <td>{{ route.cost }}</td>
-          <td>{{ route.numReviews }}</td>
+          <td>{{ route.duration }}</td>
+          <td>{{ route.tagName }}</td>
           <td>
             <div *ngIf="route.city">
               <a [routerLink]="['/city', route.city.id, 'view']">{{ route.city.id }}</a>
-            </div>
-          </td>
-          <td>
-            <div *ngIf="route.appUser">
-              <a [routerLink]="['/app-user', route.appUser.id, 'view']">{{ route.appUser.id }}</a>
             </div>
           </td>
           <td class="text-end">
