--- a/src/main/webapp/app/entities/stop/list/stop.component.html
+++ b/src/main/webapp/app/entities/stop/list/stop.component.html
@@ -68,9 +68,9 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="city.id">
+          <th scope="col" jhiSortBy="route.id">
             <div class="d-flex">
-              <span>City</span>
+              <span>Route</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
@@ -88,8 +88,8 @@
           <td>{{ stop.longitude }}</td>
           <td>{{ stop.sequenceNumber }}</td>
           <td>
-            <div *ngIf="stop.city">
-              <a [routerLink]="['/route', stop.city.id, 'view']">{{ stop.city.id }}</a>
+            <div *ngIf="stop.route">
+              <a [routerLink]="['/route', stop.route.id, 'view']">{{ stop.route.id }}</a>
             </div>
           </td>
           <td class="text-end">
