--- a/src/main/webapp/app/entities/route/update/route-update.component.html
+++ b/src/main/webapp/app/entities/route/update/route-update.component.html
@@ -78,6 +78,13 @@
         </div>
 
         <div class="row mb-3">
+          <label for="field_tags">Tag</label>
+          <select class="form-control" id="field_tags" data-cy="tag" multiple name="tags" formControlName="tags" [compareWith]="compareTag">
+            <option [ngValue]="tagOption" *ngFor="let tagOption of tagsSharedCollection">{{ tagOption.name }}</option>
+          </select>
+        </div>
+
+        <div class="row mb-3">
           <label class="form-label" for="field_city">City</label>
           <select class="form-control" id="field_city" data-cy="city" name="city" formControlName="city" [compareWith]="compareCity">
             <option [ngValue]="null"></option>
