--- a/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
+++ b/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
@@ -26,6 +26,13 @@
         <dd>
           <span>{{ appUser.user?.login }}</span>
         </dd>
+        <dt><span>Tag</span></dt>
+        <dd>
+          <span *ngFor="let tag of appUser.tags; let last = last">
+            <a [routerLink]="['/tag', tag.id, 'view']">{{ tag.name }}</a
+            >{{ last ? '' : ', ' }}
+          </span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
