--- a/src/main/webapp/app/entities/city/detail/city-detail.component.html
+++ b/src/main/webapp/app/entities/city/detail/city-detail.component.html
@@ -18,6 +18,10 @@
         <dd>
           <span>{{ city.name }}</span>
         </dd>
+        <dt><span>Country</span></dt>
+        <dd>
+          <span>{{ city.country }}</span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
