feat: add validation and link stops to route on route creation. Also added commented attempt at linking appuser and user.

--- a/src/main/webapp/app/rating/rating.component.html
+++ b/src/main/webapp/app/rating/rating.component.html
@@ -58,7 +58,7 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="routeCost">Give the cost the route:</label>
+        <label for="routeCost">Give the cost of the route in £:</label>
         <input
           type="text"
           [(ngModel)]="routeCost"
