feat: add method to get all stops with specific route id

--- a/src/main/webapp/app/map-display/map-display.component.html
+++ b/src/main/webapp/app/map-display/map-display.component.html
@@ -6,7 +6,8 @@
     <p *ngIf="routeFound">Total time: {{ travelTime }}h</p>
     <p *ngIf="routeFound">Total distance: {{ travelDistance }}km</p>
     <button type="button" (click)="clearAllWaypoints()">Clear all</button>
-    <button type="button" (click)="getRouteFromId(1101)">Display Route</button>
+    <button type="button" (click)="getRouteFromId(1201)">Get Route</button>
+    <button type="button" (click)="getStopsFromRouteId(1201)">Get Stops</button>
   </div>
   <div class="mapContainer">
     <div class="mapBorder">
