--- a/src/main/webapp/app/rating/rating.component.html
+++ b/src/main/webapp/app/rating/rating.component.html
@@ -69,15 +69,13 @@
           class="form-control"
         />
       </div>
-
       <div class="form-group">
-        <label for="tags">Pick tags:</label>
-        <div class="checkbox-group">
-          <label> <input type="checkbox" [(ngModel)]="tag1" name="tag1" id="tag1" /> Tag 1 </label>
-          <label> <input type="checkbox" [(ngModel)]="tag2" name="tag2" id="tag2" /> Tag 2 </label>
-          <label> <input type="checkbox" [(ngModel)]="tag3" name="tag3" id="tag3" /> Tag 3 </label>
-        </div>
+        <label for="field_tags">Tags</label>
+        <select multiple class="form-control" id="field_tags" [(ngModel)]="selectedTags" name="tags">
+          <option [ngValue]="tag" *ngFor="let tag of tagsSharedCollection">{{ tag.name }}</option>
+        </select>
       </div>
+
       <div class="center-text">
         <button type="submit" (click)="submitRoute()">Submit Route</button>
         <button type="button" (click)="clearAllWaypoints()">Clear all</button>
