--- a/src/main/webapp/app/rating/rating.component.html
+++ b/src/main/webapp/app/rating/rating.component.html
@@ -70,10 +70,21 @@
         />
       </div>
       <div class="form-group">
-        <label for="field_tags">Tags</label>
-        <select multiple class="form-control" id="field_tags" [(ngModel)]="selectedTags" name="tags">
-          <option [ngValue]="tag" *ngFor="let tag of tagsSharedCollection">{{ tag.name }}</option>
-        </select>
+        <label for="tags">Select Tags:</label>
+        <div class="tags-container">
+          <div class="form-check" *ngFor="let tag of tagsSharedCollection; let i = index">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              [checked]="tag.checked"
+              (change)="onTagCheckChange(tag, $event)"
+              [id]="'tag-' + tag.id"
+            />
+            <label class="form-check-label" [for]="'tag-' + tag.id">
+              {{ tag.name }}
+            </label>
+          </div>
+        </div>
       </div>
 
       <div class="center-text">
