feat: add method to display selected route

--- a/src/main/webapp/app/map-display/map-display.component.scss
+++ b/src/main/webapp/app/map-display/map-display.component.scss
@@ -12,6 +12,18 @@
   padding-left: 15px;
 }
 
+.routeSelectorForm {
+  label {
+    margin-bottom: 10px;
+  }
+  input {
+    margin-bottom: 10px;
+  }
+  button {
+    margin-bottom: 10px;
+  }
+}
+
 .mapContainer {
   height: auto;
   width: 70%;
