--- a/src/main/webapp/app/map-display/map-display.component.html
+++ b/src/main/webapp/app/map-display/map-display.component.html
@@ -3,14 +3,14 @@
 <div class="divContainer">
   <div class="routeMenuContainer">
     <h2>Route Summary</h2>
-    <form [formGroup]="routeForm">
+    <form class="routeSelectorForm">
       <div>
-        <label for="routeIdSelector"></label>
-        <select id="routeIdSelector">
+        <label for="routeIdSelector">Select route: </label>
+        <select id="routeIdSelector" name="selectedRouteId" [(ngModel)]="selectedRoute">
           <option *ngFor="let routeId of routeList" [ngValue]="routeId.id">{{ routeId.title }}</option>
         </select>
       </div>
-      <button type="submit" (click)="getStopsFromRouteId(1)">Get Stops</button>
+      <button type="submit" (click)="displayRoute()">Display Route</button>
     </form>
     <button type="button" (click)="clearAllWaypoints()">Clear all</button>
   </div>
