added a div for the structure of the homepage

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,8 +1,10 @@
-<div class="mySlides">
-  <div class="adventurous"><h1>Choose your Adventure</h1></div>
-  <jhi-carousel><p>Caption Text</p></jhi-carousel>
-  <div class="text">
-    <h2>Customise a Tour</h2>
+<div class="adventurous"><h1>Choose your Adventure</h1></div>
+<div class="behindCard">
+  <div class="mySlides">
+    <jhi-carousel><p>Caption Text</p></jhi-carousel>
+    <div class="text">
+      <h2>Customise a Tour</h2>
+    </div>
+    <jhi-search-form></jhi-search-form>
   </div>
-  <jhi-search-form></jhi-search-form>
 </div>
