changed colour of navbar to match theme

--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -36,7 +36,7 @@ Navbar
     }
   }
   .container-fluid {
-    background: teal; //sets the colour of the navbar
+    background: #333; //sets the colour of the navbar
     padding-top: 2rem; //increased the navbar thickness
   }
 
